SystemsExpert/Labs/09-Gateway_API/Exercise2/secure-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: secure-route
  namespace: default
spec:
  parentRefs:
    - name: eg
      namespace: default
      sectionName: https
  hostnames:
    - secure.example.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: lab-nginx-svc
          port: 80
